# odus

./: Odus C.ipynb  README.md  __init__.py  analysis_utils.py  dacc.py  nothing.py  pobj.py  setup.cfg  setup.py
data/surveys/: A04.xlsx  A06.xlsx  A07.xlsx  A08.xlsx  A09.xlsx  A10.xlsx  A16.xlsx  A17.xlsx  A18.xlsx  A19.xlsx  A20.xlsx  A22.xlsx  A23.xlsx  A24.xlsx  A25.xlsx  A26.xlsx  A30.xlsx  A31.xlsx  A33.xlsx  A35.xlsx  A37.xlsx  A38.xlsx  A40.xlsx  A42.xlsx  A44.xlsx  A46.xlsx  A47.xlsx  A48.xlsx  A49.xlsx  A50.xlsx  A51.xlsx  A56.xlsx  A57.xlsx  A58.xlsx  A59.xlsx  B01.xlsx  B03.xlsx  B04.xlsx  B05.xlsx  B12.xlsx  (+28 more)
docs/: Odus demo.ipynb
docsrc/: index.rst
odus/: analysis_utils.py  dacc.py  data_plot.py  nothing.py  plot_utils.py  pobj.py.patch  raw_data_diagnosis.py  util.py
odus/data/: SOS Qualtrics Survey-with number label.docx  SOS Yearly Survey-with labels May27.docx
odus/data/surveys/: A01.xlsx  A02.xlsx  A03.xlsx  A05.xlsx  A11.xlsx  A12.xlsx  A13.xlsx  A14.xlsx  A15.xlsx  A21.xlsx  A27.xlsx  A28.xlsx  A29.xlsx  A32.xlsx  A34.xlsx  A36.xlsx  A41.xlsx  A43.xlsx  A45.xlsx  A52.xlsx  A53.xlsx  A54.xlsx  A55.xlsx  A60.xlsx  A61.xlsx  B02.xlsx  B07.xlsx  B08.xlsx  B09.xlsx  B10.xlsx  B11.xlsx  B13.xlsx  B20.xlsx  B21.xlsx  B27.xlsx  B31.xlsx  B32.xlsx  B33.xlsx  B34.xlsx  B36.xlsx  (+11 more)
