[metadata]
name = odus
version = 0.0.7
url = https://github.com/thorwhalen/odus
platforms = any
description_file = README.md
description = Tools to provide easy access to prepared data to data scientists that can't be asked.
long_description = file: README.md
long_description_content_type = text/markdown
author = Thor Whalen
author_email = thorwhalen1@gmail.com
license = MIT
keywords = 
		data
		data access
		drug use
		markov
		bayesian

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	py2store
	pandas
	numpy
	Pillow
	spyn
	matplotlib
	openpyxl
	argh

